[B]v0.4.0[/B] (07/12/2018)
  - Χρήση cache για γρήγορη πλοήγηση και μείωση κίνησης στην σελίδα
  - Προσθήκη Κατηγορία Γιορτινές(Χριστουγενιάτικα ή Πασχαλινά)
  - Προσθήκη Τοπ 100 στις ταινιές GAMATO-KIDS
  - Αποθήκευση, Διαγραφή και προβολή παλιότερων αναζητήσεων
  - Προσθήκη Διαγραφή αναζήτησης στο context menu
  - Προσθήκη Ρυθμίσεων στο context menu
  - Προσθήκη Καθαρισμού cache στο context menu

[B]v0.3.3[/B] (23/8/2018)
  - Διόρθωση Resolver

[B]v0.3.2[/B] (27/8/2018)
  - Διόρθωση Gamato movies

[B]v0.3.1[/B] (15/8/2018)
  - Διόρθωση Σειρών

[B]v0.3.0[/B] (14/8/2018)
  - Προσθήκη ταινιών από gamatokids.

[B]v0.2.1[/B] (30/6/2018)
  - Υποστήριξη για kodi18.

[B]v0.2.0[/B] (01/6/2018)
  - Διορθώσεις στον κώδικα.

[B]v0.1.9[/B] (01/6/2018)
  - Διορθώσεις στον κώδικα.
  - Προσθήκη υποστήριξης για Openload χωρίς pair!

v0.1.8 (22/5/2018)
  - Διορθώσεις στον κώδικα.
  - Αφαίρεση λειτουργιών.

v0.1.7
  - Διορθώσεις στον κώδικα.
  - Αφαίρεση Εξαρτήσεων που δεν χρειάζονταν.
v0.1.6
  - Διορθώσεις στον κώδικα
  - ΝΕΑ εικονίδια
  - Εισαγωγή στοιχείων λογαριασμού
  - προσθήκη context menu PAIR TOOL στο μενού τον ροών.
v0.1.5
  - Διορθώσεις στον κώδικα
v0.1.4
  - Διορθώσεις στον κώδικα
v0.1.3
  - Διορθώσεις στον κώδικα
v0.1.2
  - Διορθώσεις στον κώδικα
v0.1.1
  - Διορθώσεις στον κώδικα
v0.1.0
  - Διορθώσεις στον κώδικα
v0.0.9
  - Διορθώσεις στον κώδικα
v0.0.8
  - Διορθώσεις στον κώδικα
v0.0.7
 - Προσθήκη Αγγλικής Γλώσσας(αν είναι επιλεγμένη γλώσσα συστήματος)
 - Προσθήκη Trailer
 - Προσθήκη Τύπου ταινίας(Με υπότιτλους/χωρίς/Μεταγλωτισμένο/Προσεχώς)
 - Προσθήκη Προβολής μέσω των ρυθμίσεων(Επιλογή Προβολής στο Μενού)
 - Διορθώσεις στον κώδικα

v0.0.6
 - έλεγχος για το αν υπάρχει το 
   repository.GRecoTM εγκατεστημένο ώστε
   να λαμβάνει τα updates,αλλά και τα απαραίτητα 
   modules.  
v0.0.5
 -διορθώσεις regex για την πλοκή
v0.0.4
 - διορθώσεις στον κώδικα
 -Προσθήκη κατηγοριών ΜΕΤΑΓΛΩΤΙΣΜΕΝΑ/ΥΠΟΤΙΤΛΟΙ
v0.0.3
 - διορθώσεις στον κώδικα
v0.0.2
 - αλλαγές στο ΜΕΝΟΥ