@@ -49,9 +49,9 @@
 		</extension>
 	</addon>
 
-	<addon id="plugin.video.cartoonsgr" name="CartoonsGR" version="0.4.0.d" provider-name="Bugatsinho">
+	<addon id="plugin.video.cartoonsgr" name="CartoonsGR" version="0.4.1" provider-name="Bugatsinho">
 	  <requires>
-		<import addon="xbmc.python" version="2.1.0"/>
+		<import addon="xbmc.python" version="2.19.0"/>
 		<import addon="script.module.resolveurl" version="5.0.00"/>
 		<import addon="script.module.unshortenit"  version="0.3.1"/>
 	  </requires>
@@ -76,14 +76,8 @@
 		<forum>https://www.facebook.com/groups/GRecoTM/</forum>
 		<source>http://grecotm.com/repo/</source>
 		<website>http://grecotm.com</website>
-		<news>[B]v0.4.0[/B] (07/12/2018)
-	  - Χρήση cache για γρήγορη πλοήγηση και μείωση κίνησης στην σελίδα
-	  - Προσθήκη Κατηγορία Γιορτινές(Χριστουγενιάτικα ή Πασχαλινά)
-	  - Προσθήκη Τοπ 100 στις ταινιές GAMATO-KIDS
-	  - Αποθήκευση, Διαγραφή και προβολή παλιότερων αναζητήσεων
-	  - Προσθήκη Διαγραφή αναζήτησης στο context menu
-	  - Προσθήκη Ρυθμίσεων στο context menu
-	  - Προσθήκη Καθαρισμού cache στο context menu</news>
+		<news>[B]v0.4.1[/B] (10/02/2018)
+	  - Διόρθωση gamato movies</news>
 	  </extension>
 	</addon>
 
