@@ -1,3 +1,6 @@
+[B]v0.4.1[/B] (10/02/2018)
+  - Διόρθωση gamato movies
+
 [B]v0.4.0[/B] (07/12/2018)
   - Χρήση cache για γρήγορη πλοήγηση και μείωση κίνησης στην σελίδα
   - Προσθήκη Κατηγορία Γιορτινές(Χριστουγενιάτικα ή Πασχαλινά)
